--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ p{
   line-height: 1.5;
 }
 
-.photo_title {
+h1 {
 font-family: 'billabong', 'billabongregular';
 text-align: center;
 font-size: 13rem;
@@ -17,6 +17,15 @@ font-weight: 100;
 margin:2rem 0;
 letter-spacing: -1;
 color:rgb(4, 7, 41);
+}
+
+h1 a {
+  color: #000;
+  text-decoration: none;
+}
+
+h1 a:focus {
+  outline: 0;
 }
 
 @font-face {
@@ -29,6 +38,9 @@ color:rgb(4, 7, 41);
     font-style: normal;
 }
 
+body{
+  background: offwhite;
+}
 
 .photoGrid{
   max-width: 1000px;
@@ -47,6 +59,66 @@ color:rgb(4, 7, 41);
   margin: 0rem 2rem 2rem 2rem;
 }
 
+.figure .single-photo{
+  flex-basis: calc(33.333% - 4rem);
+  border: 1px solid #d3d3d3;
+  padding: 2rem;
+  flex-grow: 1;
+  margin: 0 2rem 2rem 2rem;
+
+}
+
+.single-photo{
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  background:#fff;
+  border: #000;
+}
+
+
+.single-photo .figure {
+  box-shadow: none;
+  margin: 0 2rem 0 0 ;
+  border:0;
+  padding: 0;
+  flex: 1 0 60%;
+  max-width: 60%;
+
+}
+
+.single-photo .comments {
+  flex: 1 0 40%;
+  max-width: 40%;
+}
+
+.single-photo .photo {
+  width: 100%;
+  margin: 0;
+}
+
+.comment {
+  width: 100%;
+}
+
+.comment p{
+  border-bottom: 1px solid #d3d3d3;
+}
+
+
+.comment-form input, .comment-form textarea{
+  width: 100%;
+  border: 0;
+  font-size: 1.3rem;
+  padding: 1rem 0;
+  border-bottom: 2px solid #271c58;
+  background: rgb(251, 248, 248);
+  outline: none;
+  resize: vertical;
+}
+
+
+
 .photo{
   width: calc(100% + 4rem);
   margin: -2rem 0rem 0rem -2rem;
@@ -58,31 +130,32 @@ display: flex;
 justify-content: center;
 }
 
+.button{
+  flex-basis: 48%;
+  color: red;
+  font-size: 15px;
+  line-height: 2;
+  padding: 5px;
+ 
+
+}
+
+.addIcon {
+  margin: 20px auto;
+  display: table;
+  padding: 40px;
+  background: url("https://image.flaticon.com/icons/svg/60/60740.svg" ) center no-repeat;
+  background-size: contain;
+  border: none;
+}
 
 
 
 
 /*second parth*/
-button{
-flex-basis: 48%;
-color:red;
-font-size: 15px;
-border: 2px solid #f2f2f2;
-background: #fff;
-line-height: 2;
-padding: 5px;
-}
 
-.addIcon{
-  margin: 20px auto;
-  border-radius: 50%;
-  background: rgb(141, 233, 154);
-  display: table;
-  padding: 40px;
-  background-size: contain;
-  border:none;
 
-}
+
 
 .form {
   background: rgb(200, 233, 225);
@@ -119,5 +192,74 @@ padding: 5px;
   }
 
   button:hover{
-    background: #51a2bb;
+    background: #3093b1;
   }
+
+  .comment-count {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgb(7, 19, 134);
+    border: solid 2px red;
+  }
+
+  .loader{
+    height: 20%;
+    width: 100%;
+    display: flex;
+    position:fixed;
+    align-items: center;
+    justify-self: center;
+    font-size: 28pt;
+  }
+
+
+  /*loader container*/
+  .load{
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
+	min-height: 100vh;
+	font-family: 'Lato', sans-serif;
+	margin: 0;
+  }
+
+.loading-container {
+	animation: rotate 3s linear infinite;
+	height: 50px;
+	transform-origin: bottom center;
+}
+
+@keyframes rotate {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.circle {
+	animation: grow 1.5s linear infinite;
+	background-color: purple;
+	border-radius: 50%;
+	display: inline-block;
+	margin: -10px;
+	height: 40px;
+	width: 40px;
+	transform: scale(0);
+}
+
+.circle:nth-of-type(2) {
+	animation-delay: .75s;
+	background-color: palevioletred;
+}
+
+@keyframes grow {
+	50% {
+		transform: scale(1);
+	}
+}
+
